; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_dib0090.c_dib0090_dcc_freq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_dib0090.c_dib0090_dcc_freq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.dib0090_state* }
%struct.dib0090_state = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dib0090_dcc_freq(%struct.dvb_frontend* %0, i64 %1) #0 {
  %3 = alloca %struct.dvb_frontend*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.dib0090_state*, align 8
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %7 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %6, i32 0, i32 0
  %8 = load %struct.dib0090_state*, %struct.dib0090_state** %7, align 8
  store %struct.dib0090_state* %8, %struct.dib0090_state** %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load %struct.dib0090_state*, %struct.dib0090_state** %5, align 8
  %13 = call i32 @dib0090_write_reg(%struct.dib0090_state* %12, i32 4, i32 0)
  br label %17

14:                                               ; preds = %2
  %15 = load %struct.dib0090_state*, %struct.dib0090_state** %5, align 8
  %16 = call i32 @dib0090_write_reg(%struct.dib0090_state* %15, i32 4, i32 1)
  br label %17

17:                                               ; preds = %14, %11
  ret void
}

declare dso_local i32 @dib0090_write_reg(%struct.dib0090_state*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
